@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] vulns.Report:make_output() now generates XML structured output 
+  reports automatically. [Paulino Calderon]
+
 o [NSE] Added http-avaya-ipoffice-users script to enumerate users in Avaya 
   IP Office 7.x systems. [Paulino Calderon]
 
